# glitch-grow-seo

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  fleet.example.json  package.json  pnpm-lock.yaml  shopify.app.toml
agent/: README.md  pyproject.toml
agent/scripts/: install_gtm.py  install_gtm_ga4.py  run_daily.sh
agent/src/glitch_seo_agent/: __init__.py  cli.py  config.py  db.py  logging_setup.py
agent/src/glitch_seo_agent/clients/: __init__.py  auth.py  custom_search.py  indexing.py  natural_language.py  pagespeed.py  search_console.py  tag_manager.py
agent/src/glitch_seo_agent/pulls/: __init__.py  entities.py  gsc.py  perf.py  serp.py
agent/src/glitch_seo_agent/reports/: daily.py
agent/src/glitch_seo_agent/sources/: __init__.py  fleet_source.py  registry.py  shopify_source.py  site_conn_source.py
app/agent/: clientMemory.ts  embeddings.ts  fleet.ts  index.ts  llm.ts  memory.ts  rebuild.ts  runner.ts  seoReport.ts  signals.ts  types.ts
app/routes/: api.fleet.$siteId.head.jsx  api.fleet.$siteId[.]llms[.]txt.jsx  app._index.jsx  app.agent.apply.jsx  app.agent.preview.jsx  app.agent.reports.$id.jsx  app.agent.reports.jsx  app.jsx  auth.classicoo.$.jsx  docs.jsx  fleet.$siteId.rebuild.jsx  fleet.$siteId.reports.$reportId.jsx  fleet.$siteId.reports.jsx  fleet.jsx  llms[.]txt.jsx  privacy.jsx  support.jsx  webhooks.customers.data_request.jsx  webhooks.customers.redact.jsx  webhooks.shop.redact.jsx
cli/: audit-fleet.ts  sh-admin.mjs
extensions/glitch-grow-seo-schema/: shopify.extension.toml
integrations/astro/: README.md  (+2 more)
prisma/: schema.prisma
(+20 files in other folders)
