[project]
name = "glitch-seo-agent"
version = "0.1.0"
description = "Python signal-pull pipeline for the Glitch Grow AI SEO Agent. Pulls Search Console / PageSpeed Insights / Natural Language / Indexing / Custom Search data for every enrolled site and writes SeoReport rows for the Node app to read."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "../LICENSE" }
keywords = ["seo", "agent", "google-search-console", "pagespeed", "astro", "shopify"]

dependencies = [
  # Core
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "python-dotenv>=1.0",

  # Database — direct writes; no ORM by design, Prisma owns the schema
  "asyncpg>=0.30",

  # Google auth + API clients
  "google-auth>=2.35",
  "google-auth-httplib2>=0.2",
  "google-api-python-client>=2.150",
  "google-cloud-language>=2.15",

  # CLI
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
  "ruff>=0.7",
]

[project.scripts]
glitch-seo-agent = "glitch_seo_agent.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glitch_seo_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"] # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
